# 3rdYrProject

./: .gitignore
code/: Cargo.toml  build_debug.sh  run_debug.sh  run_release_with_validation.sh
code/shaders/: triangle.frag  triangle.vert
code/src/: main.rs  vertex.rs
code/src/renderer/: mod.rs  ubo.rs  window.rs
pbr/shaders/: triangle.frag
pbr/src/: main.rs
plan/: CSC-30014 Project GDPR and Ethics Checklist 2021-22(1).docx  UG Project Plan template (BCS) 2021-22 v2.docx  gantt.ods
report/: build.sh  glossary.tex  preamble.sty  report.bib  report.tex
report/sections/: abstract.tex  abstract.tex.bak  acknowledgements.tex  body.tex  body.tex.bak  conclusion.tex  glossary.tex  intro.tex  intro.tex.bak  testing.tex  testing.tex.bak
