[package]
name = "pbr"
version = "0.1.0"
edition = "2021"

[features]
validation = []

[dependencies]
# vulkan bindings
ash = "0.33.3"

# compile time shader bundling
vk-shader-macros = "0.2.7"

# windowing library
sdl2 = "0.34.5"

# vulkan memory allocator
gpu-allocator = { version = "0.9.0", features = [ "vulkan" ] }

#linear algebra
nalgebra = "0.29.0"
nalgebra-glm = "0.15.0"

#misc
lazy_static = "1.4.0"
cfg-if = "1.0.0"

memoffset = "0.6.5" #provides offset_of
